test_cases/syntax_errors/6_overflow/2/program.asm


addi $t0, $zero, -2147483648
addi $t1, $zero, 1
sub $t2, $t0, $t1